add velocity buffer functionality to enc_dec set splitting

--- a/jupyter-notebooks/Decoding_functionalized.ipynb
+++ b/jupyter-notebooks/Decoding_functionalized.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,20 @@
       "text/html": [
        "\n",
        "<link rel=\"stylesheet\" href=\"https://code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css\">\n",
-       "<style>div.hololayout {\n",
+       "<style>div.bk-hbox {\n",
+       "    display: flex;\n",
+       "    justify-content: center;\n",
+       "}\n",
+       "\n",
+       "div.bk-hbox div.bk-plot {\n",
+       "    padding: 8px;\n",
+       "}\n",
+       "\n",
+       "div.bk-hbox div.bk-data-table {\n",
+       "    padding: 20px;\n",
+       "}\n",
+       "\n",
+       "div.hololayout {\n",
        "  display: flex;\n",
        "  align-items: center;\n",
        "  margin: 0;\n",
@@ -660,19 +673,6 @@
        ".noUi-target {\n",
        "  margin-left: 0.5em;\n",
        "  margin-right: 0.5em;\n",
-       "}\n",
-       "\n",
-       "div.bk-hbox {\n",
-       "    display: flex;\n",
-       "    justify-content: center;\n",
-       "}\n",
-       "\n",
-       "div.bk-hbox div.bk-plot {\n",
-       "    padding: 8px;\n",
-       "}\n",
-       "\n",
-       "div.bk-hbox div.bk-data-table {\n",
-       "    padding: 20px;\n",
        "}\n",
        "</style>\n",
        "\n",
@@ -1625,7 +1625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1637,14 +1637,14 @@
     "#                       'gus': [6,7,8,9,10,11,12,17,18,19,21,24,25,26,27,30], # list(range(6,13)) + list(range(17,22)) + list(range(24,28)) + [30]\n",
     "#                        'bernard': [1,2,3,4,5,7,8,10,11,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29], \n",
     "#                       'fievel': [1,2,3,5,6,7,8,9,10,11,12,14,15,16,17,18,19,20,22,23,24,25,27,28,29]}\n",
-    "tetrodes_dictionary = {'remy': [4,6,9,10,11,12,13,14,15,17,19,20,21,22,23,24,25,26,28,29,30],\n",
+    "tetrodes_dictionary = {'remy': [4],\n",
     "                       'gus': [6,7,8,9,10,11,12,17,18,19,21,24,25,26,27,30], \n",
     "                       'bernard': [1,2,3,4,5,7,8,10,11,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29], \n",
     "                       'fievel': [1,2,3,5,6,7,8,9,10,11,12,14,15,16,17,18,19,20,22,23,24,25,27,28,29]}\n",
     "\n",
     "pos_bin_size = 5\n",
     "velocity_thresh_for_enc_dec = 4\n",
-    "#velocity_buffer = 0\n",
+    "velocity_buffer = 2\n",
     "\n",
     "shift_amt_for_shuffle = 0\n",
     "\n",
@@ -1658,7 +1658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -1668,7 +1668,7 @@
      "output_type": "stream",
      "text": [
       "Duplicate marks found (and removed): 0\n",
-      "original length: 3104808\n",
+      "original length: 110451\n",
       "Rips less than velocity thresh: 1256\n",
       "Linearization result exists. Loading it.\n",
       "[  0.   5.  10.  15.  20.  25.  30.  35.  40.  45.  50.  55.  60.  64.\n",
@@ -1691,6 +1691,17 @@
       " [ 99 111]\n",
       " [116 128]\n",
       " [133 145]]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/anna/anaconda3/lib/python3.6/site-packages/pandas/core/frame.py:4025: SettingWithCopyWarning:\n",
+      "\n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n"
      ]
     }
    ],
@@ -1747,7 +1758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1774,23 +1785,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/anna/anaconda3/lib/python3.6/site-packages/pandas/core/indexing.py:969: FutureWarning:\n",
+      "\n",
+      "Passing list-likes to .loc or [] with any missing label will raise\n",
+      "KeyError in the future, you can use .reindex() as an alternative.\n",
+      "\n",
+      "See the documentation here:\n",
+      "https://pandas.pydata.org/pandas-docs/stable/indexing.html#deprecate-loc-reindex-listlike\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Number of trials:  109\n",
-      "Encoding spikes: 1181194\n",
-      "Decoding spikes: 1904645\n",
-      "Total epoch time (sec):  4108.5141\n"
+      "Encoding spikes: 54352\n",
+      "Decoding spikes: 55351\n",
+      "Total epoch time (sec):  4108.1900000000005\n",
+      "1375.5360666666666\n"
      ]
     }
    ],
    "source": [
     "# decide what to use as encoding and decoding data\n",
-    "marks, binned_linear_pos = sungod_util.assign_enc_dec_set_by_velocity(binned_linear_pos, marks, velocity_thresh_for_enc_dec)\n",
+    "marks, binned_linear_pos = sungod_util.assign_enc_dec_set_by_velocity(binned_linear_pos, marks, velocity_thresh_for_enc_dec, velocity_buffer)\n",
     "\n",
     "# rearrange data by trials \n",
     "pos_reordered, marks_reordered, order = sungod_util.reorder_data_by_random_trial_order(trials, binned_linear_pos, marks)\n",
@@ -1803,22 +1828,21 @@
     "encoding_pos = pos_reordered.loc[pos_reordered['encoding_set']==1]\n",
     "\n",
     "# apply shift for shuffling \n",
-    "encoding_marks_shifted, shift_amount = sungod_util.shift_enc_marks_for_shuffle(encoding_marks, shift_amt_for_shuffle)\n",
-    "# note that mike puts everything back in chronological order here, but that shouldnt be needed "
+    "encoding_marks_shifted, shift_amount = sungod_util.shift_enc_marks_for_shuffle(encoding_marks, shift_amt_for_shuffle)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "15:03:05 [INFO] spykshrk.franklab.pp_decoder.pp_clusterless: Dask chunksize: 26\n",
-      "15:03:05 [INFO] spykshrk.franklab.pp_decoder.pp_clusterless: Memory utilization at: 50.0%\n",
-      "15:03:05 [INFO] spykshrk.franklab.pp_decoder.pp_clusterless: Expected worker peak memory usage: 468.61 MB\n"
+      "17:57:59 [INFO] spykshrk.franklab.pp_decoder.pp_clusterless: Dask chunksize: 574\n",
+      "17:57:59 [INFO] spykshrk.franklab.pp_decoder.pp_clusterless: Memory utilization at: 50.0%\n",
+      "17:57:59 [INFO] spykshrk.franklab.pp_decoder.pp_clusterless: Expected worker peak memory usage: 476.04 MB\n"
      ]
     },
     {
@@ -1842,6 +1866,14 @@
       "See the documentation here:\n",
       "https://pandas.pydata.org/pandas-docs/stable/indexing.html#deprecate-loc-reindex-listlike\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 8min 4s, sys: 15min 46s, total: 23min 51s\n",
+      "Wall time: 42.9 s\n"
+     ]
     }
    ],
    "source": [
@@ -1859,9 +1891,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting decoder\n",
+      "Beginning likelihood calculation\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/anna/Src/spykshrk_realtime/spykshrk/franklab/pp_decoder/pp_clusterless.py:560: FutureWarning:\n",
+      ".labels was deprecated in version 0.24.0. Use .codes instead.\n",
+      "/home/anna/Src/spykshrk_realtime/spykshrk/franklab/pp_decoder/pp_clusterless.py:567: FutureWarning:\n",
+      "the 'labels' keyword is deprecated, use 'codes' instead\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Beginning posterior calculation\n",
+      "Decoder finished!\n",
+      "Posteriors shape: (2048550, 148)\n",
+      "CPU times: user 7min 5s, sys: 9min 3s, total: 16min 9s\n",
+      "Wall time: 2min 32s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "\n",
@@ -1870,20 +1932,11 @@
     "decoder = OfflinePPDecoder(observ_obj=observ_obj, trans_mat=encoder.trans_mat['sungod'], \n",
     "                               prob_no_spike=encoder.prob_no_spike,\n",
     "                               encode_settings=encode_settings, decode_settings=decode_settings, \n",
-    "                               time_bin_size=decode_settings.time_bin_size, all_linear_position=binned_linear_pos, velocity_filter=4)\n",
+    "                               time_bin_size=decode_settings.time_bin_size, all_linear_position=binned_linear_pos)\n",
     "\n",
     "posteriors = decoder.run_decoder()\n",
     "print('Decoder finished!')\n",
     "print('Posteriors shape: '+ str(posteriors.shape))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO: update the \"velocity_mask\" to me a more generic encoding mask (bc won't be correct with the buffer )"
    ]
   },
   {
@@ -1913,21 +1966,21 @@
    "outputs": [],
    "source": [
     "# TEMPORARY: save posteriors and position\n",
-    "posterior_file_name = '/data2/mcoulter/remy/' + rat_name + '_' + str(day_dictionary[rat_name][0]) + '_' + str(epoch_dictionary[rat_name][0]) + '_shuffle_' + str(marks_index_shift) + '_posteriors_functionalized.nc'\n",
+    "posterior_file_name = '/data2/mcoulter/remy/' + rat_name + '_' + str(day_dictionary[rat_name][0]) + '_' + str(epoch_dictionary[rat_name][0]) + '_shuffle_' + str(shift_amount) + '_posteriors_functionalized.nc'\n",
     "\n",
-    "post1 = posteriors.apply_time_event(rips_vel_filtered, event_mask_name='ripple_grp')\n",
+    "post1 = posteriors.apply_time_event(rips, event_mask_name='ripple_grp')\n",
     "post2 = post1.reset_index()\n",
-    "post3 = convert_dan_posterior_to_xarray(post2, tetrodes_dictionary[rat_name], \n",
-    "                                        velocity_filter, encode_settings, decode_settings, encoder.trans_mat['sungod'], trialsindex_shuffled, marks_index_shift)\n",
+    "post3 = trodes2SS.convert_dan_posterior_to_xarray(post2, tetrodes_dictionary[rat_name], \n",
+    "                                        velocity_thresh_for_enc_dec, encode_settings, decode_settings, encoder.trans_mat['sungod'], order, shift_amount)\n",
     "    #print(len(post3))\n",
     "post3.to_netcdf(posterior_file_name)\n",
     "print('Saved posteriors to '+posterior_file_name)\n",
     "\n",
     "    # to export linearized position to MatLab: again convert to xarray and then save as netcdf\n",
     "\n",
-    "position_file_name = '/data2/mcoulter/remy/' + rat_name + '_' + str(day_dictionary[rat_name][0]) + '_' + str(epoch_dictionary[rat_name][0]) + '_shuffle_' + str(marks_index_shift) + '_linearposition_functionalized.nc'\n",
+    "position_file_name = '/data2/mcoulter/remy/' + rat_name + '_' + str(day_dictionary[rat_name][0]) + '_' + str(epoch_dictionary[rat_name][0]) + '_shuffle_' + str(shift_amount) + '_linearposition_functionalized.nc'\n",
     "\n",
-    "linearized_pos1 = pos_all_linear.apply_time_event(rips_vel_filtered, event_mask_name='ripple_grp')\n",
+    "linearized_pos1 = binned_linear_pos.apply_time_event(rips, event_mask_name='ripple_grp')\n",
     "linearized_pos2 = linearized_pos1.reset_index()\n",
     "linearized_pos3 = linearized_pos2.to_xarray()\n",
     "linearized_pos3.to_netcdf(position_file_name)\n",
