--- a/jupyter-notebooks/Decoding_functionalized.ipynb
+++ b/jupyter-notebooks/Decoding_functionalized.ipynb
@@ -560,7 +560,20 @@
       "text/html": [
        "\n",
        "<link rel=\"stylesheet\" href=\"https://code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css\">\n",
-       "<style>div.hololayout {\n",
+       "<style>div.bk-hbox {\n",
+       "    display: flex;\n",
+       "    justify-content: center;\n",
+       "}\n",
+       "\n",
+       "div.bk-hbox div.bk-plot {\n",
+       "    padding: 8px;\n",
+       "}\n",
+       "\n",
+       "div.bk-hbox div.bk-data-table {\n",
+       "    padding: 20px;\n",
+       "}\n",
+       "\n",
+       "div.hololayout {\n",
        "  display: flex;\n",
        "  align-items: center;\n",
        "  margin: 0;\n",
@@ -652,19 +665,6 @@
        ".noUi-target {\n",
        "  margin-left: 0.5em;\n",
        "  margin-right: 0.5em;\n",
-       "}\n",
-       "\n",
-       "div.bk-hbox {\n",
-       "    display: flex;\n",
-       "    justify-content: center;\n",
-       "}\n",
-       "\n",
-       "div.bk-hbox div.bk-plot {\n",
-       "    padding: 8px;\n",
-       "}\n",
-       "\n",
-       "div.bk-hbox div.bk-data-table {\n",
-       "    padding: 20px;\n",
        "}\n",
        "</style>\n",
        "\n",
@@ -1581,7 +1581,8 @@
     "epoch = 2   # previously:{'remy':[4], 'gus':[2], 'bernard':[4], 'fievel':[2]} \n",
     "\n",
     "# define data source filepaths\n",
-    "path_base = '/data2/mcoulter/'\n",
+    "#path_base = '/data2/mcoulter/'\n",
+    "path_base = '/mnt/vortex/mcoulter/'\n",
     "raw_directory = path_base + 'raw_data/' + rat_name + '/'\n",
     "linearization_path = path_base + 'maze_info/'\n",
     "day_ep = str(day) + '_' + str(epoch)\n",
@@ -1615,6 +1616,579 @@
     "discrete_tm_val=.99   # for classifier\n",
     "\n",
     "print(tetrodes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Duplicate marks found (and removed): 0\n",
+      "original length: 3104808\n"
+     ]
+    }
+   ],
+   "source": [
+    "#initialize data importer\n",
+    "datasrc = trodes2SS.TrodesImport(raw_directory, rat_name, [day], \n",
+    "                       [epoch], tetrodes)\n",
+    "# Import marks\n",
+    "marks = datasrc.import_marks()\n",
+    "print('original length: '+str(marks.shape[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>c00</th>\n",
+       "      <th>c01</th>\n",
+       "      <th>c02</th>\n",
+       "      <th>c03</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>time</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>112309268</th>\n",
+       "      <th>3743.642267</th>\n",
+       "      <td>144</td>\n",
+       "      <td>99</td>\n",
+       "      <td>101</td>\n",
+       "      <td>84</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>112309337</th>\n",
+       "      <th>3743.644567</th>\n",
+       "      <td>187</td>\n",
+       "      <td>132</td>\n",
+       "      <td>94</td>\n",
+       "      <td>58</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>112309426</th>\n",
+       "      <th>3743.647533</th>\n",
+       "      <td>100</td>\n",
+       "      <td>115</td>\n",
+       "      <td>120</td>\n",
+       "      <td>80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>112309634</th>\n",
+       "      <th>3743.654467</th>\n",
+       "      <td>188</td>\n",
+       "      <td>180</td>\n",
+       "      <td>193</td>\n",
+       "      <td>133</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>112309855</th>\n",
+       "      <th>3743.661833</th>\n",
+       "      <td>135</td>\n",
+       "      <td>110</td>\n",
+       "      <td>82</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>112310107</th>\n",
+       "      <th>3743.670233</th>\n",
+       "      <td>116</td>\n",
+       "      <td>97</td>\n",
+       "      <td>150</td>\n",
+       "      <td>74</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>112310294</th>\n",
+       "      <th>3743.676467</th>\n",
+       "      <td>155</td>\n",
+       "      <td>108</td>\n",
+       "      <td>67</td>\n",
+       "      <td>62</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>112310511</th>\n",
+       "      <th>3743.683700</th>\n",
+       "      <td>180</td>\n",
+       "      <td>117</td>\n",
+       "      <td>111</td>\n",
+       "      <td>57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>112310552</th>\n",
+       "      <th>3743.685067</th>\n",
+       "      <td>109</td>\n",
+       "      <td>108</td>\n",
+       "      <td>128</td>\n",
+       "      <td>79</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>112310770</th>\n",
+       "      <th>3743.692333</th>\n",
+       "      <td>195</td>\n",
+       "      <td>126</td>\n",
+       "      <td>121</td>\n",
+       "      <td>66</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>112311184</th>\n",
+       "      <th>3743.706133</th>\n",
+       "      <td>201</td>\n",
+       "      <td>137</td>\n",
+       "      <td>112</td>\n",
+       "      <td>73</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>112311233</th>\n",
+       "      <th>3743.707767</th>\n",
+       "      <td>106</td>\n",
+       "      <td>88</td>\n",
+       "      <td>80</td>\n",
+       "      <td>54</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>112311426</th>\n",
+       "      <th>3743.714200</th>\n",
+       "      <td>214</td>\n",
+       "      <td>193</td>\n",
+       "      <td>290</td>\n",
+       "      <td>143</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>112311638</th>\n",
+       "      <th>3743.721267</th>\n",
+       "      <td>167</td>\n",
+       "      <td>142</td>\n",
+       "      <td>261</td>\n",
+       "      <td>118</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>112311804</th>\n",
+       "      <th>3743.726800</th>\n",
+       "      <td>217</td>\n",
+       "      <td>194</td>\n",
+       "      <td>281</td>\n",
+       "      <td>153</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>112312111</th>\n",
+       "      <th>3743.737033</th>\n",
+       "      <td>199</td>\n",
+       "      <td>158</td>\n",
+       "      <td>286</td>\n",
+       "      <td>128</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>112312174</th>\n",
+       "      <th>3743.739133</th>\n",
+       "      <td>215</td>\n",
+       "      <td>144</td>\n",
+       "      <td>112</td>\n",
+       "      <td>71</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>112312305</th>\n",
+       "      <th>3743.743500</th>\n",
+       "      <td>219</td>\n",
+       "      <td>178</td>\n",
+       "      <td>286</td>\n",
+       "      <td>149</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>112312601</th>\n",
+       "      <th>3743.753367</th>\n",
+       "      <td>211</td>\n",
+       "      <td>142</td>\n",
+       "      <td>108</td>\n",
+       "      <td>76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>112312776</th>\n",
+       "      <th>3743.759200</th>\n",
+       "      <td>142</td>\n",
+       "      <td>68</td>\n",
+       "      <td>64</td>\n",
+       "      <td>41</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>112312951</th>\n",
+       "      <th>3743.765033</th>\n",
+       "      <td>158</td>\n",
+       "      <td>114</td>\n",
+       "      <td>79</td>\n",
+       "      <td>64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>112313001</th>\n",
+       "      <th>3743.766700</th>\n",
+       "      <td>125</td>\n",
+       "      <td>90</td>\n",
+       "      <td>79</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>112313043</th>\n",
+       "      <th>3743.768100</th>\n",
+       "      <td>101</td>\n",
+       "      <td>51</td>\n",
+       "      <td>52</td>\n",
+       "      <td>46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>112313107</th>\n",
+       "      <th>3743.770233</th>\n",
+       "      <td>98</td>\n",
+       "      <td>121</td>\n",
+       "      <td>124</td>\n",
+       "      <td>80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>112313160</th>\n",
+       "      <th>3743.772000</th>\n",
+       "      <td>193</td>\n",
+       "      <td>131</td>\n",
+       "      <td>97</td>\n",
+       "      <td>68</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>112313235</th>\n",
+       "      <th>3743.774500</th>\n",
+       "      <td>109</td>\n",
+       "      <td>98</td>\n",
+       "      <td>134</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>112313336</th>\n",
+       "      <th>3743.777867</th>\n",
+       "      <td>179</td>\n",
+       "      <td>128</td>\n",
+       "      <td>95</td>\n",
+       "      <td>57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>112313420</th>\n",
+       "      <th>3743.780667</th>\n",
+       "      <td>103</td>\n",
+       "      <td>67</td>\n",
+       "      <td>53</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>112313518</th>\n",
+       "      <th>3743.783933</th>\n",
+       "      <td>117</td>\n",
+       "      <td>84</td>\n",
+       "      <td>62</td>\n",
+       "      <td>34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>112313596</th>\n",
+       "      <th>3743.786533</th>\n",
+       "      <td>127</td>\n",
+       "      <td>126</td>\n",
+       "      <td>143</td>\n",
+       "      <td>85</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>120880527</th>\n",
+       "      <th>4029.350900</th>\n",
+       "      <td>105</td>\n",
+       "      <td>71</td>\n",
+       "      <td>52</td>\n",
+       "      <td>33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>120881171</th>\n",
+       "      <th>4029.372367</th>\n",
+       "      <td>361</td>\n",
+       "      <td>202</td>\n",
+       "      <td>224</td>\n",
+       "      <td>131</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>120881886</th>\n",
+       "      <th>4029.396200</th>\n",
+       "      <td>113</td>\n",
+       "      <td>66</td>\n",
+       "      <td>63</td>\n",
+       "      <td>44</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>120881987</th>\n",
+       "      <th>4029.399567</th>\n",
+       "      <td>120</td>\n",
+       "      <td>134</td>\n",
+       "      <td>223</td>\n",
+       "      <td>150</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>120882203</th>\n",
+       "      <th>4029.406767</th>\n",
+       "      <td>330</td>\n",
+       "      <td>171</td>\n",
+       "      <td>192</td>\n",
+       "      <td>124</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>120882246</th>\n",
+       "      <th>4029.408200</th>\n",
+       "      <td>171</td>\n",
+       "      <td>129</td>\n",
+       "      <td>133</td>\n",
+       "      <td>96</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>120884000</th>\n",
+       "      <th>4029.466667</th>\n",
+       "      <td>133</td>\n",
+       "      <td>129</td>\n",
+       "      <td>173</td>\n",
+       "      <td>106</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>120884442</th>\n",
+       "      <th>4029.481400</th>\n",
+       "      <td>336</td>\n",
+       "      <td>212</td>\n",
+       "      <td>210</td>\n",
+       "      <td>147</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>120884795</th>\n",
+       "      <th>4029.493167</th>\n",
+       "      <td>115</td>\n",
+       "      <td>93</td>\n",
+       "      <td>93</td>\n",
+       "      <td>69</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>120884856</th>\n",
+       "      <th>4029.495200</th>\n",
+       "      <td>148</td>\n",
+       "      <td>99</td>\n",
+       "      <td>94</td>\n",
+       "      <td>66</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>120884897</th>\n",
+       "      <th>4029.496567</th>\n",
+       "      <td>337</td>\n",
+       "      <td>188</td>\n",
+       "      <td>192</td>\n",
+       "      <td>112</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>120885205</th>\n",
+       "      <th>4029.506833</th>\n",
+       "      <td>117</td>\n",
+       "      <td>126</td>\n",
+       "      <td>178</td>\n",
+       "      <td>111</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>120885699</th>\n",
+       "      <th>4029.523300</th>\n",
+       "      <td>108</td>\n",
+       "      <td>116</td>\n",
+       "      <td>153</td>\n",
+       "      <td>88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>120886862</th>\n",
+       "      <th>4029.562067</th>\n",
+       "      <td>104</td>\n",
+       "      <td>110</td>\n",
+       "      <td>153</td>\n",
+       "      <td>88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>120887240</th>\n",
+       "      <th>4029.574667</th>\n",
+       "      <td>357</td>\n",
+       "      <td>185</td>\n",
+       "      <td>199</td>\n",
+       "      <td>120</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>120888401</th>\n",
+       "      <th>4029.613367</th>\n",
+       "      <td>112</td>\n",
+       "      <td>112</td>\n",
+       "      <td>141</td>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>120888594</th>\n",
+       "      <th>4029.619800</th>\n",
+       "      <td>113</td>\n",
+       "      <td>113</td>\n",
+       "      <td>151</td>\n",
+       "      <td>98</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>120889251</th>\n",
+       "      <th>4029.641700</th>\n",
+       "      <td>122</td>\n",
+       "      <td>103</td>\n",
+       "      <td>104</td>\n",
+       "      <td>62</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>120889522</th>\n",
+       "      <th>4029.650733</th>\n",
+       "      <td>341</td>\n",
+       "      <td>189</td>\n",
+       "      <td>188</td>\n",
+       "      <td>114</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>120889982</th>\n",
+       "      <th>4029.666067</th>\n",
+       "      <td>105</td>\n",
+       "      <td>102</td>\n",
+       "      <td>135</td>\n",
+       "      <td>79</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>120890736</th>\n",
+       "      <th>4029.691200</th>\n",
+       "      <td>335</td>\n",
+       "      <td>183</td>\n",
+       "      <td>178</td>\n",
+       "      <td>91</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>120891625</th>\n",
+       "      <th>4029.720833</th>\n",
+       "      <td>320</td>\n",
+       "      <td>172</td>\n",
+       "      <td>187</td>\n",
+       "      <td>101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>120892008</th>\n",
+       "      <th>4029.733600</th>\n",
+       "      <td>359</td>\n",
+       "      <td>211</td>\n",
+       "      <td>210</td>\n",
+       "      <td>124</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>120892124</th>\n",
+       "      <th>4029.737467</th>\n",
+       "      <td>313</td>\n",
+       "      <td>184</td>\n",
+       "      <td>197</td>\n",
+       "      <td>149</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>120892170</th>\n",
+       "      <th>4029.739000</th>\n",
+       "      <td>131</td>\n",
+       "      <td>86</td>\n",
+       "      <td>106</td>\n",
+       "      <td>59</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>120892283</th>\n",
+       "      <th>4029.742767</th>\n",
+       "      <td>292</td>\n",
+       "      <td>153</td>\n",
+       "      <td>141</td>\n",
+       "      <td>92</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>120892445</th>\n",
+       "      <th>4029.748167</th>\n",
+       "      <td>258</td>\n",
+       "      <td>144</td>\n",
+       "      <td>140</td>\n",
+       "      <td>83</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>120892569</th>\n",
+       "      <th>4029.752300</th>\n",
+       "      <td>183</td>\n",
+       "      <td>95</td>\n",
+       "      <td>111</td>\n",
+       "      <td>61</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>120892731</th>\n",
+       "      <th>4029.757700</th>\n",
+       "      <td>193</td>\n",
+       "      <td>119</td>\n",
+       "      <td>107</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>120892866</th>\n",
+       "      <th>4029.762200</th>\n",
+       "      <td>175</td>\n",
+       "      <td>85</td>\n",
+       "      <td>82</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>23000 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "<___SpikeFeatures: 87bfd570-d2e2-410e-9e52-ddfbd5191f7c, shape: ((23000, 4))>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#marks[marks['elec_grp_id'] == 30]\n",
+    "#marks\n",
+    "marks.loc[(20,2,24)][177000:200000]"
    ]
   },
   {
