add posterior sum to real-time decoder

--- a/jupyter-notebooks/MEC_Decoding_functionalized.ipynb
+++ b/jupyter-notebooks/MEC_Decoding_functionalized.ipynb
@@ -1636,21 +1636,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[4, 6, 9, 10, 11, 12, 13, 14, 15, 17, 19, 20, 21, 22, 23, 24, 25, 26, 28, 29, 30]\n"
+      "[1, 2, 3, 5, 7, 8, 9, 10, 11, 12, 14, 15, 16, 18, 19, 20, 22, 23, 24, 25, 27, 28, 29]\n"
      ]
     }
    ],
    "source": [
     "#### Define parameters\n",
-    "rat_name = 'remy'\n",
-    "day =  20     #previously:{'remy':[20], 'gus':[28], 'bernard':[23], 'fievel':[19]}\n",
+    "rat_name = 'fievel'\n",
+    "day =  19     #previously:{'remy':[20], 'gus':[28], 'bernard':[23], 'fievel':[19]}\n",
     "epoch = 2   # previously:{'remy':[4], 'gus':[2], 'bernard':[4], 'fievel':[2]} \n",
     "\n",
     "# define data source filepaths\n",
