--- a/jupyter-notebooks/MEC_Decoding_functionalized.ipynb
+++ b/jupyter-notebooks/MEC_Decoding_functionalized.ipynb
@@ -1636,27 +1636,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 2, 3, 5, 7, 8, 9, 10, 11, 12, 14, 15, 16, 18, 19, 20, 22, 23, 24, 25, 27, 28, 29]\n"
+      "[4]\n"
      ]
     }
    ],
    "source": [
     "#### Define parameters\n",
-    "rat_name = 'fievel'\n",
-    "day =  19     #previously:{'remy':[20], 'gus':[28], 'bernard':[23], 'fievel':[19]}\n",
+    "rat_name = 'jaq'\n",
+    "day = 20     #previously:{'remy':[20], 'gus':[28], 'bernard':[23], 'fievel':[19]}\n",
     "epoch = 2   # previously:{'remy':[4], 'gus':[2], 'bernard':[4], 'fievel':[2]} \n",
     "\n",
     "# define data source filepaths\n",
-    "path_base = '/data2/mcoulter/'\n",
+    "#path_base = '/data2/mcoulter/'\n",
     "#path_base = '/mnt/vortex/mcoulter/'\n",
-    "raw_directory = path_base + 'raw_data/' + rat_name + '/'\n",
+    "path_base = '/stelmo/anna/'\n",
+    "#raw_directory = path_base + 'raw_data/' + rat_name + '/'\n",
+    "raw_directory = path_base + rat_name + '/filterframework/'\n",
     "linearization_path = path_base + 'maze_info/'\n",
     "day_ep = str(day) + '_' + str(epoch)\n",
     "\n",
@@ -1667,9 +1669,10 @@
     "\n",
     "# if you want all ca1 tets with no deadchans, set tetlist to None. otherwise, specify list\n",
     "\n",
-    "tetlist = None\n",
-    "#tetlist = [4]\n",
+    "#tetlist = None\n",
+    "tetlist = [4]\n",
     "\n",
+    "# note this is not working for jac - is the tetinfo file messed up?\n",
     "if tetlist is None:\n",
     "    animalinfo  = {rat_name: Animal(directory=raw_directory, short_name=rat_name)}\n",
     "    tetinfo = lfdp.tetrodes.make_tetrode_dataframe(animalinfo)\n",
@@ -1706,43 +1709,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Duplicate marks found (and removed): 0\n",
-      "original length: 3104808\n",
-      "0 above 2000uV events removed\n",
-      "1691953 below 150uV events removed\n",
-      "0 below -999uV events removed\n",
-      "after filtering: 1412855\n",
-      "Linearization found. Loading it\n",
-      "Rips less than velocity thresh: 1256\n",
-      "[  0.   5.  10.  15.  20.  25.  30.  35.  40.  45.  50.  55.  60.  64.\n",
-      "  69.  74.  79.  84.  89.  94.  99. 104. 109. 114. 119. 124. 129. 134.\n",
-      " 139. 144. 147. 152. 157. 162. 167. 172. 177. 182. 187. 192. 197. 202.\n",
-      " 207. 212. 217. 222. 227. 232. 237. 242. 247. 252. 257. 262. 267. 272.\n",
-      " 277. 282. 287. 292. 297. 302. 307. 312. 317. 319. 324. 329. 334. 339.\n",
-      " 344. 349. 354. 359. 364. 369. 374. 379. 384. 389. 394. 399. 403. 408.\n",
-      " 413. 418. 423. 428. 433. 438. 443. 448. 453. 458. 463. 468. 473. 478.\n",
-      " 483. 485. 490. 495. 500. 505. 510. 515. 520. 525. 530. 535. 540. 545.\n",
-      " 550. 555. 560. 565. 568. 573. 578. 583. 588. 593. 598. 603. 608. 613.\n",
-      " 618. 623. 628. 633. 638. 643. 648. 649. 654. 659. 664. 669. 674. 679.\n",
-      " 684. 689. 694. 699. 704. 709. 714.]\n",
-      "[[  0   8]\n",
-      " [ 13  25]\n",
-      " [ 30  42]\n",
-      " [ 47  59]\n",
-      " [ 65  77]\n",
-      " [ 82  94]\n",
-      " [ 99 111]\n",
-      " [116 128]\n",
-      " [133 145]]\n",
-      "CPU times: user 5min 38s, sys: 15min 27s, total: 21min 5s\n",
-      "Wall time: 44.4 s\n"
+      "Rips less than velocity thresh: 320\n",
+      "CPU times: user 2.08 s, sys: 304 ms, total: 2.39 s\n",
+      "Wall time: 2.6 s\n"
      ]
     }
    ],
@@ -1754,13 +1730,13 @@
     "datasrc = trodes2SS.TrodesImport(raw_directory, rat_name, [day], \n",
     "                       [epoch], tetrodes)\n",
     "# Import marks\n",
-    "marks = datasrc.import_marks()\n",
-    "print('original length: '+str(marks.shape[0]))\n",
+    "#marks = datasrc.import_marks()\n",
+    "#print('original length: '+str(marks.shape[0]))\n",
     "# OPTIONAL: to reduce mark number, can filter by size. Current detection threshold is 100  \n",
-    "marks = trodes2SS.threshold_marks(marks, maxthresh=2000,minthresh=150)\n",
+    "#marks = trodes2SS.threshold_marks(marks, maxthresh=2000,minthresh=150)\n",
     "# remove any big negative events (artifacts?)\n",
-    "marks = trodes2SS.threshold_marks_negative(marks, negthresh=-999)\n",
-    "print('after filtering: '+str(marks.shape[0]))\n",
+    "#marks = trodes2SS.threshold_marks_negative(marks, negthresh=-999)\n",
+    "#print('after filtering: '+str(marks.shape[0]))\n",
     "\n",
     "# Import trials\n",
     "trials = datasrc.import_trials()\n",
@@ -1769,34 +1745,295 @@
     "linear_pos_raw = datasrc.import_pos(xy='x')   # this is basically just to pull in speed, will be replaced with linearized below\n",
     "#posY = datasrc.import_pos(xy='y')          #  OPTIONAL; useful for 2d visualization\n",
     "\n",
-    "# if linearization exists, load it. if not, run the linearization.\n",
-    "lin_output1 = linearization_path + rat_name + '/' + rat_name + '_' + day_ep + '_' + 'linearized_distance.npy'\n",
-    "lin_output2 = linearization_path + rat_name + '/' + rat_name + '_' + day_ep + '_' + 'linearized_track_segments.npy'\n",
+    "# skip this for right now\n",
+    "## if linearization exists, load it. if not, run the linearization.\n",
+    "#lin_output1 = linearization_path + rat_name + '/' + rat_name + '_' + day_ep + '_' + 'linearized_distance.npy'\n",
+    "#lin_output2 = linearization_path + rat_name + '/' + rat_name + '_' + day_ep + '_' + 'linearized_track_segments.npy'\n",
     "\n",
-    "if os.path.exists(lin_output1) == False:\n",
-    "    print('Linearization result doesnt exist. Doing linearization calculation')\n",
-    "    sungod_util.run_linearization_routine(rat_name, day, epoch, linearization_path, raw_directory, gap_size=20)\n",
-    "    linear_pos_raw['linpos_flat'] = np.load(lin_output1)\n",
-    "    track_segment_ids = np.load(lin_output2)\n",
-    "else: \n",
-    "    print('Linearization found. Loading it')\n",
-    "    linear_pos_raw['linpos_flat'] = np.load(lin_output1)   #replace x pos with linerized \n",
-    "    track_segment_ids = np.load(lin_output2)\n",
+    "#if os.path.exists(lin_output1) == False:\n",
+    "#    print('Linearization result doesnt exist. Doing linearization calculation')\n",
+    "#    sungod_util.run_linearization_routine(rat_name, day, epoch, linearization_path, raw_directory, gap_size=20)\n",
+    "#    linear_pos_raw['linpos_flat'] = np.load(lin_output1)\n",
+    "#    track_segment_ids = np.load(lin_output2)\n",
+    "#else: \n",
+    "#    print('Linearization found. Loading it')\n",
+    "#    linear_pos_raw['linpos_flat'] = np.load(lin_output1)   #replace x pos with linerized \n",
+    "#    track_segment_ids = np.load(lin_output2)\n",
     "    \n",
     "# Import ripples\n",
     "rips_tmp = datasrc.import_rips(linear_pos_raw, velthresh=4) \n",
     "rips = RippleTimes.create_default(rips_tmp,1)  # cast to rippletimes obj\n",
     "print('Rips less than velocity thresh: '+str(len(rips)))\n",
+    "\n",
     "# generate boundary definitions of each segment\n",
-    "arm_coords, _ = sungod_util.define_segment_coordinates(linear_pos_raw, track_segment_ids)  # optional addition output of all occupied positions (not just bounds)\n",
+    "#arm_coords, _ = sungod_util.define_segment_coordinates(linear_pos_raw, track_segment_ids)  # optional addition output of all occupied positions (not just bounds)\n",
     "\n",
     "#bin linear position \n",
-    "binned_linear_pos, binned_arm_coords, pos_bins = sungod_util.bin_position_data(linear_pos_raw, arm_coords, pos_bin_size)\n",
+    "#binned_linear_pos, binned_arm_coords, pos_bins = sungod_util.bin_position_data(linear_pos_raw, arm_coords, pos_bin_size)\n",
     "\n",
     "# calculate bin coverage based on determined binned arm bounds   TO DO: prevent the annnoying \"copy of a slice\" error [prob need .values rather than a whole column]\n",
-    "pos_bin_delta = sungod_util.define_pos_bin_delta(binned_arm_coords, pos_bins, linear_pos_raw, pos_bin_size)\n",
+    "#pos_bin_delta = sungod_util.define_pos_bin_delta(binned_arm_coords, pos_bins, linear_pos_raw, pos_bin_size)\n",
     "\n",
-    "max_pos = binned_arm_coords[-1][-1]+1\n"
+    "#max_pos = binned_arm_coords[-1][-1]+1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>starttime</th>\n",
+       "      <th>endtime</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>day</th>\n",
+       "      <th>epoch</th>\n",
+       "      <th>trial</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"33\" valign=\"top\">20</th>\n",
+       "      <th rowspan=\"33\" valign=\"top\">2</th>\n",
+       "      <th>0</th>\n",
+       "      <td>2144.541633</td>\n",
+       "      <td>2202.940633</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2202.940633</td>\n",
+       "      <td>2238.294633</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2238.294633</td>\n",
+       "      <td>2268.251633</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2268.251633</td>\n",
+       "      <td>2285.713633</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2285.713633</td>\n",
+       "      <td>2303.584633</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2303.584633</td>\n",
+       "      <td>2328.986633</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2328.986633</td>\n",
+       "      <td>2360.150633</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2360.150633</td>\n",
+       "      <td>2397.493633</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2397.493633</td>\n",
+       "      <td>2424.017633</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2424.017633</td>\n",
+       "      <td>2460.527633</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2460.527633</td>\n",
+       "      <td>2499.641633</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>2499.641633</td>\n",
+       "      <td>2543.402633</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>2543.402633</td>\n",
+       "      <td>2575.684633</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>2575.684633</td>\n",
+       "      <td>2634.465633</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>2634.465633</td>\n",
+       "      <td>2674.667633</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>2674.667633</td>\n",
+       "      <td>2721.427633</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>2721.427633</td>\n",
+       "      <td>2815.263633</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>2815.263633</td>\n",
+       "      <td>2867.303633</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>2867.303633</td>\n",
+       "      <td>2980.344633</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>2980.344633</td>\n",
+       "      <td>3043.675633</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>3043.675633</td>\n",
+       "      <td>3096.844633</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>3096.844633</td>\n",
+       "      <td>3161.839633</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>3161.839633</td>\n",
+       "      <td>3206.558633</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>3206.558633</td>\n",
+       "      <td>3252.347633</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>3252.347633</td>\n",
+       "      <td>3307.524633</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>3307.524633</td>\n",
+       "      <td>3356.781633</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>3356.781633</td>\n",
+       "      <td>3403.944633</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>3403.944633</td>\n",
+       "      <td>3438.663633</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>3438.663633</td>\n",
+       "      <td>3481.414633</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>3481.414633</td>\n",
+       "      <td>3522.649633</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>3522.649633</td>\n",
+       "      <td>3567.456633</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>3567.456633</td>\n",
+       "      <td>3613.572633</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>3613.572633</td>\n",
+       "      <td>3660.610633</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   starttime      endtime\n",
+       "day epoch trial                          \n",
+       "20  2     0      2144.541633  2202.940633\n",
+       "          1      2202.940633  2238.294633\n",
+       "          2      2238.294633  2268.251633\n",
+       "          3      2268.251633  2285.713633\n",
+       "          4      2285.713633  2303.584633\n",
+       "          5      2303.584633  2328.986633\n",
+       "          6      2328.986633  2360.150633\n",
+       "          7      2360.150633  2397.493633\n",
+       "          8      2397.493633  2424.017633\n",
+       "          9      2424.017633  2460.527633\n",
+       "          10     2460.527633  2499.641633\n",
+       "          11     2499.641633  2543.402633\n",
+       "          12     2543.402633  2575.684633\n",
+       "          13     2575.684633  2634.465633\n",
+       "          14     2634.465633  2674.667633\n",
+       "          15     2674.667633  2721.427633\n",
+       "          16     2721.427633  2815.263633\n",
+       "          17     2815.263633  2867.303633\n",
+       "          18     2867.303633  2980.344633\n",
+       "          19     2980.344633  3043.675633\n",
+       "          20     3043.675633  3096.844633\n",
+       "          21     3096.844633  3161.839633\n",
+       "          22     3161.839633  3206.558633\n",
+       "          23     3206.558633  3252.347633\n",
+       "          24     3252.347633  3307.524633\n",
+       "          25     3307.524633  3356.781633\n",
+       "          26     3356.781633  3403.944633\n",
+       "          27     3403.944633  3438.663633\n",
+       "          28     3438.663633  3481.414633\n",
+       "          29     3481.414633  3522.649633\n",
+       "          30     3522.649633  3567.456633\n",
+       "          31     3567.456633  3613.572633\n",
+       "          32     3613.572633  3660.610633"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#okay so we need to look at the rip/wait time of the trial, here trials is defined as the whole trial...\n",
+    "trials"
    ]
   },
   {
