new MEC notebooks and fix realtime box linearization

--- a/jupyter-notebooks/posterior_sum_functions.ipynb
+++ b/jupyter-notebooks/posterior_sum_functions.ipynb
@@ -6,6 +6,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# pull in all trial times - including rip/wait, reward, etc\n",
+    "# based on trials from sungod utils"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# offline posterior sum for ripples\n",
     "# pull out rows of posteriors dataframe for each specific ripple\n",
     "\n",
