--- a/jupyter-notebooks/Decoding_functionalized_MEC.ipynb
+++ b/jupyter-notebooks/Decoding_functionalized_MEC.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    },
     {
      "data": {
       "application/javascript": [
@@ -1629,21 +1637,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[11]\n"
+      "[1, 2, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 28, 29, 30]\n"
      ]
     }
    ],
    "source": [
     "## Define parameters\n",
-    "rat_name = 'remy'\n",
-    "day =  20    #previously:{'remy':[20], 'gus':[28], 'bernard':[23], 'fievel':[19]}\n",
+    "rat_name = 'roquefort'\n",
+    "day =  10    #previously:{'remy':[20], 'gus':[28], 'bernard':[23], 'fievel':[19]}\n",
     "epoch = 2  # previously:{'remy':[4], 'gus':[2], 'bernard':[4], 'fievel':[2]} \n",
     "\n",
     "# define data source filepaths\n",
@@ -1659,8 +1667,8 @@
     "\n",
     "# if you want all ca1 tets with no deadchans, set tetlist to None. otherwise, specify list\n",
     "\n",
-    "#tetlist = None\n",
-    "tetlist = [11]\n",
+    "tetlist = None\n",
+    "#tetlist = [11]\n",
     "\n",
     "if tetlist is None:\n",
     "    animalinfo  = {rat_name: Animal(directory=raw_directory, short_name=rat_name)}\n",
@@ -1687,7 +1695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -1695,13 +1703,13 @@
      "output_type": "stream",
      "text": [
       "Duplicate marks found (and removed): 0\n",
-      "original length: 156587\n",
-      "0 above 2000uV events removed\n",
-      "0 below 100uV events removed\n",
+      "original length: 3246472\n",
+      "31 above 2000uV events removed\n",
+      "1739283 below 150uV events removed\n",
       "0 below -999uV events removed\n",
-      "after filtering: 156587\n",
+      "after filtering: 1507158\n",
       "Linearization found. Loading it\n",
-      "Rips less than velocity thresh: 1256\n",
+      "Rips less than velocity thresh: 887\n",
       "[  0.   5.  10.  15.  20.  25.  30.  35.  40.  45.  50.  55.  60.  64.\n",
       "  69.  74.  79.  84.  89.  94.  99. 104. 109. 114. 119. 124. 129. 134.\n",
       " 139. 144. 147. 152. 157. 162. 167. 172. 177. 182. 187. 192. 197. 202.\n",
@@ -1712,18 +1720,18 @@
       " 483. 485. 490. 495. 500. 505. 510. 515. 520. 525. 530. 535. 540. 545.\n",
       " 550. 555. 560. 565. 568. 573. 578. 583. 588. 593. 598. 603. 608. 613.\n",
       " 618. 623. 628. 633. 638. 643. 648. 649. 654. 659. 664. 669. 674. 679.\n",
-      " 684. 689. 694. 699. 704. 709. 714.]\n",
+      " 684. 689. 694. 699. 704. 709.]\n",
       "[[  0   8]\n",
-      " [ 13  25]\n",
-      " [ 30  42]\n",
-      " [ 47  59]\n",
+      " [ 13  26]\n",
+      " [ 30  43]\n",
+      " [ 47  60]\n",
       " [ 65  77]\n",
       " [ 82  94]\n",
       " [ 99 111]\n",
-      " [116 128]\n",
-      " [133 145]]\n",
-      "CPU times: user 6.76 s, sys: 240 ms, total: 7 s\n",
-      "Wall time: 3.44 s\n"
+      " [116 127]\n",
+      " [133 144]]\n",
+      "CPU times: user 11min 15s, sys: 16.6 s, total: 11min 31s\n",
+      "Wall time: 47.3 s\n"
      ]
     }
    ],
@@ -1738,7 +1746,7 @@
     "marks = datasrc.import_marks()\n",
     "print('original length: '+str(marks.shape[0]))\n",
     "# OPTIONAL: to reduce mark number, can filter by size. Current detection threshold is 100  \n",
-    "marks = trodes2SS.threshold_marks(marks, maxthresh=2000,minthresh=100)\n",
+    "marks = trodes2SS.threshold_marks(marks, maxthresh=2000,minthresh=150)\n",
     "# remove any big negative events (artifacts?)\n",
     "marks = trodes2SS.threshold_marks_negative(marks, negthresh=-999)\n",
     "print('after filtering: '+str(marks.shape[0]))\n",
@@ -1782,7 +1790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -1808,21 +1816,13 @@
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th>c00</th>\n",
-       "      <th>c01</th>\n",
-       "      <th>c02</th>\n",
-       "      <th>c03</th>\n",
+       "      <th>starttime</th>\n",
+       "      <th>endtime</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>day</th>\n",
        "      <th>epoch</th>\n",
-       "      <th>elec_grp_id</th>\n",
-       "      <th>timestamp</th>\n",
-       "      <th>time</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
+       "      <th>trial</th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "    </tr>\n",
@@ -1831,110 +1831,95 @@
        "    <tr>\n",
        "      <th rowspan=\"11\" valign=\"top\">20</th>\n",
        "      <th rowspan=\"11\" valign=\"top\">2</th>\n",
-       "      <th rowspan=\"11\" valign=\"top\">11</th>\n",
-       "      <th>40830725</th>\n",
-       "      <th>1361.024167</th>\n",
-       "      <td>182</td>\n",
-       "      <td>107</td>\n",
-       "      <td>52</td>\n",
-       "      <td>158</td>\n",
+       "      <th>0</th>\n",
+       "      <td>1375.220333</td>\n",
+       "      <td>1524.100333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>40831063</th>\n",
-       "      <th>1361.035433</th>\n",
-       "      <td>102</td>\n",
-       "      <td>210</td>\n",
-       "      <td>238</td>\n",
-       "      <td>128</td>\n",
+       "      <th>1</th>\n",
+       "      <td>1524.100333</td>\n",
+       "      <td>1581.400333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>40831324</th>\n",
-       "      <th>1361.044133</th>\n",
-       "      <td>93</td>\n",
-       "      <td>231</td>\n",
-       "      <td>220</td>\n",
-       "      <td>121</td>\n",
+       "      <th>2</th>\n",
+       "      <td>1581.400333</td>\n",
+       "      <td>1618.258333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>40831853</th>\n",
-       "      <th>1361.061767</th>\n",
-       "      <td>113</td>\n",
-       "      <td>251</td>\n",
-       "      <td>227</td>\n",
-       "      <td>116</td>\n",
+       "      <th>3</th>\n",
+       "      <td>1618.258333</td>\n",
+       "      <td>1646.974333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>40832341</th>\n",
-       "      <th>1361.078033</th>\n",
-       "      <td>94</td>\n",
-       "      <td>209</td>\n",
-       "      <td>214</td>\n",
-       "      <td>134</td>\n",
+       "      <th>4</th>\n",
+       "      <td>1646.974333</td>\n",
+       "      <td>1697.465333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>164550812</th>\n",
-       "      <th>5485.027067</th>\n",
-       "      <td>62</td>\n",
-       "      <td>166</td>\n",
-       "      <td>235</td>\n",
-       "      <td>54</td>\n",
+       "      <th>104</th>\n",
+       "      <td>5314.083333</td>\n",
+       "      <td>5335.145333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>164551839</th>\n",
-       "      <th>5485.061300</th>\n",
-       "      <td>85</td>\n",
-       "      <td>177</td>\n",
-       "      <td>242</td>\n",
-       "      <td>83</td>\n",
+       "      <th>105</th>\n",
+       "      <td>5335.145333</td>\n",
+       "      <td>5366.125333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>164552145</th>\n",
-       "      <th>5485.071500</th>\n",
-       "      <td>111</td>\n",
-       "      <td>190</td>\n",
-       "      <td>172</td>\n",
-       "      <td>171</td>\n",
+       "      <th>106</th>\n",
+       "      <td>5366.125333</td>\n",
+       "      <td>5410.345333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>164559924</th>\n",
-       "      <th>5485.330800</th>\n",
-       "      <td>129</td>\n",
-       "      <td>214</td>\n",
-       "      <td>193</td>\n",
-       "      <td>164</td>\n",
+       "      <th>107</th>\n",
+       "      <td>5410.345333</td>\n",
+       "      <td>5449.408333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>164560303</th>\n",
-       "      <th>5485.343433</th>\n",
-       "      <td>113</td>\n",
-       "      <td>194</td>\n",
-       "      <td>162</td>\n",
-       "      <td>149</td>\n",
+       "      <th>108</th>\n",
+       "      <td>5449.408333</td>\n",
+       "      <td>5483.735333</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>156587 rows × 4 columns</p>\n",
+       "<p>109 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "<____SpikeFeatures: f7a3037b-93dd-4593-9383-0d03b318823e, shape: ((156587, 4))>"
+       "                   starttime      endtime\n",
+       "day epoch trial                          \n",
+       "20  2     0      1375.220333  1524.100333\n",
+       "          1      1524.100333  1581.400333\n",
+       "          2      1581.400333  1618.258333\n",
+       "          3      1618.258333  1646.974333\n",
+       "          4      1646.974333  1697.465333\n",
+       "...                      ...          ...\n",
+       "          104    5314.083333  5335.145333\n",
+       "          105    5335.145333  5366.125333\n",
+       "          106    5366.125333  5410.345333\n",
+       "          107    5410.345333  5449.408333\n",
+       "          108    5449.408333  5483.735333\n",
+       "\n",
+       "[109 rows x 2 columns]"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "marks"
+    "# for roqui, these numbers are for 27 tets, for remy 20\n",
+    "# total marks > 100, roqui: 3.2M, remy: 3.1M\n",
+    "# total marks > 150: roqui: 1.5M, remy: 1.4M\n",
+    "trials\n",
+    "# roqui 10, 2: 2112 - 7508 sec\n",
+    "# remy 20, 2: 1375 - 5483 sec"
    ]
   },
   {
