posterior sum lockout work

--- a/jupyter-notebooks/plot_posterior_realtime.ipynb
+++ b/jupyter-notebooks/plot_posterior_realtime.ipynb
@@ -75,7 +75,7 @@
     "#hdf_file = '/stelmo/mcoulter/spykshrk_output/bill/20191217_bill_05_r3_westerlies_streaming.rec_merged.h5'\n",
     "\n",
     "#12-22, bill run session \n",
-    "hdf_file = '/stelmo/mcoulter/bill/raw/20191222/20191222_bill_02_r1_westerlies_streaming.rec_merged.h5'\n",
+    "hdf_file = '/stelmo/mcoulter/bill/raw/20191222/spykshrk_realtime_rec_files/20191222_bill_02_r1_westerlies_streaming.rec_merged.h5'\n",
     "\n",
     "store = pd.HDFStore(hdf_file, mode='r')"
    ]
@@ -111,6 +111,53 @@
     "stim_lockout1 = store['rec_11']\n",
     "stim_message1 = store['rec_12']\n",
     "timing1 = store['rec_100']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 (4317, 77)\n",
+      "2 (0, 77)\n",
+      "3 (0, 77)\n",
+      "4 (109707, 77)\n",
+      "5 (6171, 77)\n",
+      "6 (75138, 77)\n",
+      "7 (0, 77)\n",
+      "8 (0, 77)\n",
+      "9 (12815, 77)\n",
+      "10 (4444, 77)\n",
+      "11 (0, 77)\n",
+      "12 (0, 77)\n",
+      "13 (0, 77)\n",
+      "14 (0, 77)\n",
+      "15 (0, 77)\n",
+      "16 (6015, 77)\n",
+      "17 (14281, 77)\n",
+      "18 (6089, 77)\n",
+      "19 (0, 77)\n",
+      "20 (2341, 77)\n",
+      "21 (5493, 77)\n",
+      "22 (0, 77)\n",
+      "23 (0, 77)\n",
+      "24 (1798, 77)\n",
+      "25 (3922, 77)\n",
+      "26 (0, 77)\n",
+      "27 (4961, 77)\n",
+      "28 (6403, 77)\n",
+      "29 (6139, 77)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# this shows the number of encoding spikes on each tetrode\n",
+    "for i in np.arange(1,30):\n",
+    "    print(i, encoder_data[encoder_data['elec_grp_id']==i].shape)"
    ]
   },
   {
